--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,8 +1,7 @@
-#스프링 설정
 spring:
-  #데이터베이스 설정
+  # 데이터베이스 설정
   datasource:
     driverClassName: org.h2.Driver
-    url: jdbc:h2:hem:test
+    url: jdbc:h2:mem:test
     username: sa
-    password:
+    password: 
